use Integer / Long / Double valueOf