@@ -5,7 +5,7 @@ public class DoubleSignal extends StockSignal {
 	final public Double value;
 
 	public DoubleSignal(final double value) {
-		this.value = new Double(value);
+		this.value = Double.valueOf(value);
 	}
 
 	@Override
